[package]
name = "init_guard"
version = "1.0.0"
authors = ["Erik Schulze <erikmail3333@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/estchd/init_guard"
repository = "https://github.com/estchd/init_guard"
readme = "README.md"
categories = ["concurrency"]
keywords = ["syncronization", "initialization"]
description = "A Synchronization Primitive for guarding against double initialization"

[dependencies]
